--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,7 +4,44 @@
       padding: 0;
     }
 
+    /*Inicia Estilos Heater */
+    #redes {
+      justify-content: right;
+      background-color:lightgray;
+    }
+
+    #navbarSupportedContent {
+      margin-left: 100px;
+    }
+
+    #navbarSupportedContent ul li a {
+      color: black;
+      font-size: 25px;
+      margin-left: 40px;
+    }
+
     .logo {
         width: 4rem;
         height: auto;
     }   
+
+    .btn {
+      color: black;
+      border-color: black;
+      margin-right: 10px;
+     }
+
+/*Finaliza Estilos Heater */
+
+/*Inicia Estilos Carrusel */
+    .d-block {
+      width: 500%;
+      height: 500px;
+    }
+/*Finaliza Estilos Carrusel */
+    
+/*Inicia Estilos Main */
+
+
+   
+
