--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -48,7 +48,7 @@
 /*Inicia Nuevos productos*/
 h5 {
   margin-top: 5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   margin-left: 1rem;
   font-weight: 700;
 }
@@ -58,6 +58,7 @@ text-align: center;
 }
 .col-md-6 p {
 text-align: center;
+margin-bottom: 5rem;
 }
 /*Finaliza Nuevos productos*/
 
@@ -67,53 +68,18 @@ text-align: center;
   margin-top: 2rem;
 }
 
+.espacio {
+  margin-bottom: 4rem;
+}
+
 /*Inicia Footer*/
-/*
-.col-lg-7 {
-  
-  width: 100%;
-  height: 15rem;
-  margin-top: 1rem;
-  text-align:center;
-}*/
 
-/*
-.col-lg-7 img {
-  margin-right: 10rem;
-  margin-left: 15rem;
-}*/
-
-
-/*
-.footer img {
-  width: 90px;
-  padding-top: 1rem;
-  margin-left: 20rem;
-  margin-right: 15rem;
-}*/
-
-
-.col-lg-7 a {
-  width: 90px;
-  padding-top: 1rem;
-  margin-left: 5rem;
-}
-
-.color {
-  color: white;
-  font-size:large;
-  font-weight: 600;
-  margin-left: 1rem;
-  margin-right: 1.3rem;
-  
-  text-decoration: none;
-}
-
-
-.color1 {
-  font-weight:bolder;
-  font-size: 10px;
-
+.col-md-6 a {
+margin-top: 4rem;
+color:rgb(168, 93, 174);
+font-weight: bold;
+text-decoration:underline;
+font-size: larger;
 }
 
 .footer hr {
@@ -125,10 +91,10 @@ text-align: center;
 }
 
 .contacto {
-margin-left: 2.5rem;
+margin-left: 4rem;
 color: white;
 font-weight: bolder;
-font-size: 15px;
+font-size: 25px;
 text-decoration: none;
 
 }
